turning header li into <a> and adding hover funtion

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <img src="./resources/img/logo-j.jpg">
         <nav>
             <ul>
-                <li>Menu</li>
-                <li>Assinar</li>
+                <a href=""><li>Menu</li></a>
+                <a href=""><li>Assinar</li></a>
             </ul>
         </nav>
         
